--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swipe right mo lang yung heart hehe</title>
+    <title>alamin mo nalang kung pano i open HAHAHAH</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
